fix: Container screen width on smaller devices

--- a/src/Containers.scss
+++ b/src/Containers.scss
@@ -1,6 +1,8 @@
 @import "global-variables";
 
 .container-pod {
+    overflow-x: auto;
+
     .pf-v5-c-card__header {
         border-color: #ddd;
         padding-top: var(--pf-v5-global--spacer--md);
